--- a/DotNET/FormationDotNet/ContactAspNetCore/Views/Contact/Form.cshtml
+++ b/DotNET/FormationDotNet/ContactAspNetCore/Views/Contact/Form.cshtml
@@ -1,3 +1,17 @@
 ﻿<div>
     <h1>Formulaire contact</h1>
+    <form class="container" asp-action="SubmitForm" asp-controller="Contact" method="post">
+        <div class="row m-1 justify-content-center">
+            <input type="text" name="firstName" placeholder="Votre prénom" class="col-8 form-control p-1" />
+        </div>
+        <div class="row m-1 justify-content-center">
+            <input type="text" name="lastName" placeholder="Votre nom" class="col-8 form-control p-1" />
+        </div>
+        <div class="row m-1 justify-content-center">
+            <input type="text" name="email" placeholder="Votre email" class="col-8 form-control p-1" />
+        </div>
+        <div class="row m-1 justify-content-center">
+            <button class="btn btn-primary col-8 p-1" type="submit">Valider</button>
+        </div>
+    </form>
 </div>
