--- a/DotNET/FormationDotNet/ContactAspNetCore/Views/Contact/List.cshtml
+++ b/DotNET/FormationDotNet/ContactAspNetCore/Views/Contact/List.cshtml
@@ -6,6 +6,11 @@
 }
 
 <div>
+    @if(ViewBag.Message != null) {
+        <div class="alert alert-success">
+            @ViewBag.Message
+        </div>
+    }
     <h1>Liste des contacts</h1>
     @*@foreach(Personne p in ViewData["contacts"] as List<Personne>)
     {
