suite correction contactasp.net core

--- a/DotNET/FormationDotNet/ContactAspNetCore/Views/Contact/Form.cshtml
+++ b/DotNET/FormationDotNet/ContactAspNetCore/Views/Contact/Form.cshtml
@@ -1,15 +1,31 @@
-﻿<div>
+﻿@model Personne
+<div>
     <h1>Formulaire contact</h1>
     <form class="container" asp-action="SubmitForm" asp-controller="Contact" method="post">
-        <div class="row m-1 justify-content-center">
-            <input type="text" name="firstName" placeholder="Votre prénom" class="col-8 form-control p-1" />
-        </div>
-        <div class="row m-1 justify-content-center">
-            <input type="text" name="lastName" placeholder="Votre nom" class="col-8 form-control p-1" />
-        </div>
-        <div class="row m-1 justify-content-center">
-            <input type="text" name="email" placeholder="Votre email" class="col-8 form-control p-1" />
-        </div>
+        @if (Model == null)
+        {
+            <div class="row m-1 justify-content-center">
+                <input type="text" name="firstName" placeholder="Votre prénom" class="col-8 form-control p-1" />
+            </div>
+            <div class="row m-1 justify-content-center">
+                <input type="text" name="lastName" placeholder="Votre nom" class="col-8 form-control p-1" />
+            </div>
+            <div class="row m-1 justify-content-center">
+                <input type="text" name="email" placeholder="Votre email" class="col-8 form-control p-1" />
+            </div>
+        }
+        else
+        {
+            <div class="row m-1 justify-content-center">
+                <input type="text" value="@Model.FirstName" name="firstName" placeholder="Votre prénom" class="col-8 form-control p-1" />
+            </div>
+            <div class="row m-1 justify-content-center">
+                <input type="text" value="@Model.LastName" name="lastName" placeholder="Votre nom" class="col-8 form-control p-1" />
+            </div>
+            <div class="row m-1 justify-content-center">
+                <input type="text" value="@Model.Email" name="email" placeholder="Votre email" class="col-8 form-control p-1" />
+            </div>
+        }
         <div class="row m-1 justify-content-center">
             <button class="btn btn-primary col-8 p-1" type="submit">Valider</button>
         </div>
