suite correction contactasp.net core

--- a/DotNET/FormationDotNet/ContactAspNetCore/Views/Contact/List.cshtml
+++ b/DotNET/FormationDotNet/ContactAspNetCore/Views/Contact/List.cshtml
@@ -18,7 +18,7 @@
     }*@
     @foreach(Personne p in Model)
     {
-            <div>Nom : @p.LastName, Prénom : @p.FirstName, Email: @p.Email <a asp-controller="Contact" asp-action="Detail" asp-route-id="@p.Id">Détail</a></div>
+            <div>Nom : @p.LastName, Prénom : @p.FirstName, Email: @p.Email <a asp-controller="Contact" asp-action="Detail" asp-route-id="@p.Id">Détail</a> <a asp-controller="Contact" asp-action="Delete" asp-route-id="@p.Id">Supprimer</a></div>
             @*@foreach(Adresse a in p.Adresses) {
                 <div>
                     @a.Street @a.City @a.PostalCode
