suite correction compte bancaire asp.net core

--- a/DotNET/FormationDotNet/CompteBancaireMVC/Views/Compte/Form.cshtml
+++ b/DotNET/FormationDotNet/CompteBancaireMVC/Views/Compte/Form.cshtml
@@ -1,1 +1,17 @@
-﻿
+﻿<form class="container" asp-action="SubmitForm" asp-controller="Compte">
+    <div class="row justify-content-center m-1">
+        <input type="text" name="Nom" class="form-control p-1 col-8" placeholder="Nom du client" />        
+    </div>
+    <div class="row justify-content-center m-1">
+        <input type="text" name="Prenom" class="form-control p-1 col-8" placeholder="Prénom du client" />        
+    </div>
+    <div class="row justify-content-center m-1">
+        <input type="text" name="Telephone" class="form-control p-1 col-8" placeholder="Téléphone du client" />        
+    </div>
+    <div class="row justify-content-center m-1">
+        <input type="text" name="Solde" class="form-control p-1 col-8" placeholder="Solde initial" />        
+    </div>
+    <div class="row justify-content-center m-1">
+        <button type="submit" class="col-8 btn-secondary btn">Valider</button>        
+    </div>
+</form>
