--- a/DotNET/FormationDotNet/FormationAspNetCoreMVC/Views/Upload/Form.cshtml
+++ b/DotNET/FormationDotNet/FormationAspNetCoreMVC/Views/Upload/Form.cshtml
@@ -1,5 +1,5 @@
 ﻿<form asp-action="SubmitUpload" asp-controller="Upload" enctype="multipart/form-data">
-    <input type="file" name="image" />
+    <input type="file" multiple name="images" />
     <div>
         <button type="submit">Envoyer</button>
     </div>
