--- a/DotNET/FormationDotNet/CorrectionPetiteAnnonce/CorrectionPetiteAnnonce/Views/_ViewImports.cshtml
+++ b/DotNET/FormationDotNet/CorrectionPetiteAnnonce/CorrectionPetiteAnnonce/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CorrectionPetiteAnnonce
 @using CorrectionPetiteAnnonce.Models
+@using CorrectionPetiteAnnonce.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
