--- a/DotNET/FormationDotNet/CorrectionPetiteAnnonce/CorrectionPetiteAnnonce/Views/Annonce/Index.cshtml
+++ b/DotNET/FormationDotNet/CorrectionPetiteAnnonce/CorrectionPetiteAnnonce/Views/Annonce/Index.cshtml
@@ -35,7 +35,7 @@
                                         @a.Titre
                                     </h2>
                                     <span class="col-2">
-                                        @_formatService.FormatPrice(a.Prix)
+                                        @_formatService.FormatPrice(a.Prix) euros
                                     </span>
                                 </div>
                                 <div class="row">
